--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -29,7 +29,8 @@ Size=93,48
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+ViewportPos=1562,291
+ViewportId=0xE927CF2F
 Size=550,680
 Collapsed=0
 
