--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -35,8 +35,9 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=974,649
-Size=297,57
+ViewportPos=1041,772
+ViewportId=0x1C33C293
+Size=438,144
 Collapsed=0
 
 [Docking][Data]
